累计修改了 363 处翻译（含新增）

--- a/Plex Media Server/plex.po
+++ b/Plex Media Server/plex.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: plex-locale-zhcn\n"
-"PO-Revision-Date: 2024-09-29 14:26\n"
+"Project-Id-Version: Chinese Language Pack for Plex\n"
+"PO-Revision-Date: 2024-09-29 18:00\n"
 "Last-Translator: x1ao4, 2024\n"
 "Language-Team: Chinese Simplified\n"
 "Language: zh_CN\n"
